--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@ layout: default
   </ul>
   <img src="https://vignette.wikia.nocookie.net/clubpenguin/images/7/7a/Festive_Maracas_dance.gif/revision/latest?cb=20150623043620" alt="Dancing Penguin from Club Penguin w/ Maracas">
 
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+ <!--<p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>-->
 
 </div>
