--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
       </li>
     {% endfor %}
   </ul>
-  <img src="https://vignette.wikia.nocookie.net/clubpenguin/images/7/7a/Festive_Maracas_dance.gif/revision/latest?cb=20150623043620" alt="Dancing Penguin from Club Penguin w/ Maracas">
+  <img src="https://media.tenor.com/images/56300d24c8ceeafbd204a6478985dd6d/tenor.gif" alt="Fortnite Dance Battle m8 r8 8/8">
 
  <!--<p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>-->
 
