--- a/index.html
+++ b/index.html
@@ -20,5 +20,20 @@ layout: default
   <img src="https://media.tenor.com/images/56300d24c8ceeafbd204a6478985dd6d/tenor.gif" alt="Fortnite Dance Battle m8 r8 8/8">
 
  <!--<p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>-->
+  <body>
+    <!-- Add a placeholder for the Twitch embed -->
+    <div id="twitch-embed"></div>
 
+    <!-- Load the Twitch embed script -->
+    <script src="https://embed.twitch.tv/embed/v1.js"></script>
+
+    <!-- Create a Twitch.Embed object that will render within the "twitch-embed" root element. -->
+    <script type="text/javascript">
+      new Twitch.Embed("twitch-embed", {
+        width: 854,
+        height: 480,
+        channel: "sorryigtg"
+      });
+    </script>
+  </body>
 </div>
