--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@ layout: default
         height: 1080,
         channel: "HVS1Gao"
       });
+        <script type="text/javascript">
+      new Twitch.Embed("twitch-embed", {
+        width: 1920,
+        height: 1080,
+        channel: "mamisami6078"
+      });
     </script>
   </body>
 </div>
