--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ layout: default
         height: 1080,
         channel: "HVS1Gao"
       });
+    </script>
         <script type="text/javascript">
       new Twitch.Embed("twitch-embed", {
         width: 1920,
