--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@ layout: default
       new Twitch.Embed("twitch-embed", {
         width: 1920,
         height: 1080,
-        channel: "HVS1Gao"
+        channel: "NekoBandit"
       });
     </script>
         <script type="text/javascript">
       new Twitch.Embed("twitch-embed", {
         width: 1920,
         height: 1080,
-        channel: "mamisami6078"
+        channel: "FlowerNep"
       });
     </script>
   </body>
