--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 ---
-
 <div class="home">
+  
   <body>
 
     <center><button onClick="showTwitch()">Toggle Twitch Channels</button></center>
     <div id="twitch-channels">
         <!-- Add a placeholder for the Twitch embed -->
-        <div id="twitch-embed"></div>
+        <div id="twitch-embed" style="display:none;"></div>
 
         <!-- Load the Twitch embed script -->
         <script src="https://embed.twitch.tv/embed/v1.js"></script>
