--- a/arizonaproject/costs.html
+++ b/arizonaproject/costs.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <head>
 <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Oswald" rel="stylesheet">
-<link rel="stylesheet" href="css/project.css">
-<script type="text/javascript" src="js/jquery-3.3.1.js"></script>
-<script type="text/javascript" src="js/project.js"></script>
-
+<link rel="stylesheet" href="../css/project.css">
+<script type="text/javascript" src="../js/jquery-3.3.1.js"></script>
+<script type="text/javascript" src="../js/project.js"></script>
 </head>
 <html>
 <title>Travel Project</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
-
-<div class="titles parallax" align="center" id='parallaxid'>
   <div class="top">
     <div class="col">
       <a href="project.html" class="bar-item col.2" onclick="scrollToTop()">Home</a>
@@ -22,18 +19,13 @@
       <a href="costs.html" class="bar-item col.2" onclick="scrollToCosts()">Costs</a>
     </div>
   </div>
-  <div class="travellocation" id="topofpage">
-    <h1 class="travelp">Arizona</h1>
-    <p>Great, possibly amazing, other vague positive adjective.</p>
-  </div>
-</div>
+<br>
 
 
 <div class="white" id="footer">
   <p>Made by Hayden Carpenter</p>
-  <a class="urls" href="https://dev.dance" target="_blank">dev.dance</a>
-  <p>:)</p>
+    <a class="urls" href="https://dev.dance" target="_blank">dev.dance</a>
+    <p>:)</p>
 </div>
-
 </body>
 </html>
