--- a/arizonaproject/events.html
+++ b/arizonaproject/events.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <head>
 <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Oswald" rel="stylesheet">
-<link rel="stylesheet" href="css/project.css">
-<script type="text/javascript" src="js/jquery-3.3.1.js"></script>
-<script type="text/javascript" src="js/project.js"></script>
+<link rel="stylesheet" href="../css/project.css">
+<script type="text/javascript" src="../js/jquery-3.3.1.js"></script>
+<script type="text/javascript" src="../js/project.js"></script>
 
 </head>
 <html>
@@ -25,7 +25,7 @@
   <div class="center padding-64 row-padding" id="events">
     <div class="quarter">
       <div class="w3-card">
-        <img class="" src="https://www.atlantaga.gov/Home/ShowImage?id=3272&t=636335665341170000" style="width:100%">
+        <img class="" src="https://t2.rbxcdn.com/a3b6774cd215e9293387a116568538a5" style="width:100%">
         <div class="w3-container padding">
           <h2>Test</h2>
           <p>Test</p>
@@ -35,7 +35,7 @@
     </div>
     <div class="quarter">
       <div class="w3-card">
-        <img class="" src="https://www.atlantaga.gov/Home/ShowImage?id=3272&t=636335665341170000" style="width:100%">
+        <img class="" src="https://t2.rbxcdn.com/a3b6774cd215e9293387a116568538a5" style="width:100%">
         <div class="w3-container padding">
           <h2>Test</h2>
           <p>Test</p>
@@ -45,7 +45,7 @@
     </div>
     <div class="quarter">
       <div class="w3-card">
-        <img class="" src="https://www.atlantaga.gov/Home/ShowImage?id=3272&t=636335665341170000" style="width:100%">
+        <img class="" src="https://t2.rbxcdn.com/a3b6774cd215e9293387a116568538a5" style="width:100%">
         <div class="w3-container padding">
           <h2>Test</h2>
           <p>Test</p>
@@ -59,6 +59,28 @@
       <p>They are nice</p>
       <p>Number two</p>
       <p>Electric Boogaloo</p>
+    </div>
+  </div>
+  <div class="center padding-64 row-padding" id="events">
+    <div class="quarter">
+      <div class="w3-card">
+        <img class="" src="http://www.ediblecommunities.com/sites/default/files/styles/ariticle_feartured_image_landscape/public/images/aggregator/phoenix%20arizona.jpg?itok=vDw3J-aS" style="width:100%">
+        <div class="w3-container padding">
+          <h2>Pheonix</h2>
+          <p>The capital of Arizona and is the place I will be flying in to. It has many stores, parks, and museums.</p>
+          <p>It is known as "The Valley of the Sun".</p>
+        </div>
+      </div>
+    </div>
+    <div class="quarter">
+      <div class="w3-card">
+        <img class="" src="https://media.nationalgeographic.org/assets/photos/000/205/20510.jpg" style="width:100%">
+        <div class="w3-container padding">
+          <h2>Monument Valley</h2>
+          <p>Monument Valley is a popular tourist location in Arizona. It is on the Arizona-Utah border.</p>
+          <p>You hike there</p>
+        </div>
+      </div>
     </div>
   </div>
 
