--- a/arizonaproject/flights.html
+++ b/arizonaproject/flights.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <head>
 <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Oswald" rel="stylesheet">
-<link rel="stylesheet" href="css/project.css">
-<script type="text/javascript" src="js/jquery-3.3.1.js"></script>
-<script type="text/javascript" src="js/project.js"></script>
+<link rel="stylesheet" href="../css/project.css">
+<script type="text/javascript" src="../js/jquery-3.3.1.js"></script>
+<script type="text/javascript" src="../js/project.js"></script>
 
 </head>
 <html>
