--- a/arizonaproject/hotels.html
+++ b/arizonaproject/hotels.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <head>
 <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Oswald" rel="stylesheet">
-<link rel="stylesheet" href="css/project.css">
-<script type="text/javascript" src="js/jquery-3.3.1.js"></script>
-<script type="text/javascript" src="js/project.js"></script>
-
+<link rel="stylesheet" href="../css/project.css">
+<script type="text/javascript" src="../js/jquery-3.3.1.js"></script>
+<script type="text/javascript" src="../js/project.js"></script>
+<!--Thank You W3 Schools-->
 </head>
 <html>
 <title>Travel Project</title>
@@ -58,15 +58,7 @@
       </div>
     </div>
   </div>
-
-
-
-
-  <div class="white" id="footer">
-    <p>Made by Hayden Carpenter</p>
-    <a class="urls" href="https://dev.dance" target="_blank">dev.dance</a>
-    <p>:)</p>
-  </div>
+  <div id="footer"></div>
 
   </body>
   </html>
