--- a/arizonaproject/schedule.html
+++ b/arizonaproject/schedule.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <head>
 <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Oswald" rel="stylesheet">
-<link rel="stylesheet" href="css/project.css">
-<script type="text/javascript" src="js/jquery-3.3.1.js"></script>
-<script type="text/javascript" src="js/project.js"></script>
+<link rel="stylesheet" href="../css/project.css">
+<script type="text/javascript" src="../js/jquery-3.3.1.js"></script>
+<script type="text/javascript" src="../js/project.js"></script>
 </head>
 <html>
 <title>Travel Project</title>
@@ -14,13 +14,12 @@
       <a href="project.html" class="bar-item col.2" onclick="scrollToTop()">Home</a>
       <a href="hotels.html" class="bar-item col.2" onclick="scrollToHotels()">Hotels</a>
       <a href="events.html" class="bar-item col.2" onclick="scrollToEvents()">Events</a>
-      <a href="schedule.html" class="bar-item col.2" onclick="scrollToSchedule()">Schedule</a>
+      <a href="schedule.html" class="bar-item col.2" onclick="scrollToSchedule()"><img src="https://cdn2.iconfinder.com/data/icons/picons-basic-2/57/basic2-259_calendar-512.png" width=1%>Schedule</a>
       <a href="flights.html" class="bar-item col.2" onclick="scrollToFlights()">Flights</a>
       <a href="costs.html" class="bar-item col.2" onclick="scrollToCosts()">Costs</a>
     </div>
   </div>
 <br style="line-height:100px" class="topPageFix">
-
     <div class="center row-padding" id="schedule" align="center">
       <table class="padding schedule">
         <caption>Schedule</caption>
@@ -34,43 +33,43 @@
           <td>Monday</td>
           <td>Hotel</td>
           <td>Activities</td>
-          <td>Cost</td>
+          <td>$69.69</td>
         </tr>
         <tr>
           <td>Tuesday</td>
           <td>Hotel</td>
           <td>Activities</td>
-          <td>Cost</td>
+          <td>$420.69</td>
         </tr>
         <tr>
           <td>Wednesday</td>
           <td>Hotel</td>
           <td>Activities</td>
-          <td>Cost</td>
+          <td>$1337.00</td>
         </tr>
         <tr>
           <td>Thursday</td>
           <td>Hotel</td>
           <td>Activities</td>
-          <td>Cost</td>
+          <td>An arm</td>
         </tr>
         <tr>
           <td>Friday</td>
           <td>Hotel</td>
           <td>Activities</td>
-          <td>Cost</td>
+          <td>A leg</td>
         </tr>
         <tr>
           <td>Saturday</td>
           <td>Hotel</td>
           <td>Activities</td>
-          <td>Cost</td>
+          <td>John F. Kennedy's Left Toenail</td>
         </tr>
         <tr>
           <td>Sunday</td>
           <td>Hotel</td>
           <td>Activities</td>
-          <td>Cost</td>
+          <td>Yes</td>
         </tr>
       </table>
     </div>
