--- a/arizonaproject/events.html
+++ b/arizonaproject/events.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<link href="https://fonts.googleapis.com/css?family=Noto+Serif|Oswald" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Courgette|Noto+Serif|Oswald" rel="stylesheet">
 <link rel="stylesheet" href="../css/project.css">
 <script type="text/javascript" src="../js/jquery-3.3.1.js"></script>
 <script type="text/javascript" src="../js/project.js"></script>
@@ -22,6 +22,7 @@
   </div>
   <br>
   <!-- events-->
+  <h1 class="headings">Events</h1>
   <div class="center padding-64 row-padding" id="events">
     <div class="quarter">
       <div class="w3-card">
@@ -83,12 +84,8 @@
       </div>
     </div>
   </div>
-
-
-<div class="white" id="footer">
-  <p>Made by Hayden Carpenter</p>
-    <a class="urls" href="https://dev.dance" target="_blank">dev.dance</a>
-    <p>:)</p>
-</div>
+  <div class="white" id="footer">
+    <p>Made by Hayden Carpenter</p>
+  </div>
 </body>
 </html>
