--- a/arizonaproject/footer.html
+++ b/arizonaproject/footer.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html>
+<footer>
 <head>
   <script type="text/javascript" src="../js/jquery-3.3.1.js"></script>
   <script type="text/javascript" src="../js/project.js"></script>
@@ -13,3 +12,4 @@
 </div>
 </body>
 </html>
+</footer>
