--- a/arizonaproject/hotels.html
+++ b/arizonaproject/hotels.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<link href="https://fonts.googleapis.com/css?family=Noto+Serif|Oswald" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Courgette|Noto+Serif|Oswald" rel="stylesheet">
 <link rel="stylesheet" href="../css/project.css">
 <script type="text/javascript" src="../js/jquery-3.3.1.js"></script>
 <script type="text/javascript" src="../js/project.js"></script>
@@ -22,6 +22,7 @@
   </div>
   <br class="topPageFix">
   <!-- Hotels -->
+  <h1 class="headings">Hotels</h1>
   <div class="center padding-64 row-padding">
     <div class="quarter" id=hotels>
       <h2>Hotels:</h2>
@@ -58,7 +59,9 @@
       </div>
     </div>
   </div>
-  <div id="footer"></div>
+  <div class="white" id="footer">
+    <p>Made by Hayden Carpenter</p>
+  </div>
 
   </body>
   </html>
