--- a/arizonaproject/schedule.html
+++ b/arizonaproject/schedule.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<link href="https://fonts.googleapis.com/css?family=Noto+Serif|Oswald" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Courgette|Noto+Serif|Oswald" rel="stylesheet">
 <link rel="stylesheet" href="../css/project.css">
 <script type="text/javascript" src="../js/jquery-3.3.1.js"></script>
 <script type="text/javascript" src="../js/project.js"></script>
@@ -14,15 +14,15 @@
       <a href="project.html" class="bar-item col.2" onclick="scrollToTop()">Home</a>
       <a href="hotels.html" class="bar-item col.2" onclick="scrollToHotels()">Hotels</a>
       <a href="events.html" class="bar-item col.2" onclick="scrollToEvents()">Events</a>
-      <a href="schedule.html" class="bar-item col.2" onclick="scrollToSchedule()"><img src="https://cdn2.iconfinder.com/data/icons/picons-basic-2/57/basic2-259_calendar-512.png" width=1%>Schedule</a>
+      <a href="schedule.html" class="bar-item col.2" onclick="scrollToSchedule()">Schedule</a>
       <a href="flights.html" class="bar-item col.2" onclick="scrollToFlights()">Flights</a>
       <a href="costs.html" class="bar-item col.2" onclick="scrollToCosts()">Costs</a>
     </div>
   </div>
 <br style="line-height:100px" class="topPageFix">
-    <div class="center row-padding" id="schedule" align="center">
+<h1 class="headings">Schedule</h1>
+    <div class="scheduletable row-padding" id="schedule" align="center">
       <table class="padding schedule">
-        <caption>Schedule</caption>
         <tr>
           <th>Day</th>
           <th>Hotel</th>
@@ -73,12 +73,9 @@
         </tr>
       </table>
     </div>
-
-
-<div class="white" id="footer">
-  <p>Made by Hayden Carpenter</p>
-    <a class="urls" href="https://dev.dance" target="_blank">dev.dance</a>
-    <p>:)</p>
+    <div class="white" id="footer">
+      <p>Made by Hayden Carpenter</p>
+    </div>
 </div>
 </body>
 </html>
