--- a/arizonaproject/costs.html
+++ b/arizonaproject/costs.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<link href="https://fonts.googleapis.com/css?family=Noto+Serif|Oswald" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Courgette|Noto+Serif|Oswald" rel="stylesheet">
 <link rel="stylesheet" href="../css/project.css">
 <script type="text/javascript" src="../js/jquery-3.3.1.js"></script>
 <script type="text/javascript" src="../js/project.js"></script>
@@ -20,12 +20,56 @@
     </div>
   </div>
 <br>
+<h1 class="headings">Costs</h1>
+<div class="costs">
+  <div class="scheduletable row-padding" id="costs" align="center">
+    <table class="padding costs">
+      <tr>
+        <th>Total Activities Costs</th>
+        <th>Total Hotel Costs</th>
+        <th>Total Flights Cost</th>
+        <th>Total Costs</th>
+      </tr>
+      <tr>
+        <td>Hotel</td>
+        <td>Activities</td>
+        <td>$69.69</td>
+      </tr>
+      <tr>
+        <td>Hotel</td>
+        <td>Activities</td>
+        <td>$420.69</td>
+      </tr>
+      <tr>
+        <td>Hotel</td>
+        <td>Activities</td>
+        <td>$1337.00</td>
+      </tr>
+      <tr>
+        <td>Hotel</td>
+        <td>Activities</td>
+        <td>An arm</td>
+      </tr>
+      <tr>
+        <td>Hotel</td>
+        <td>Activities</td>
+        <td>A leg</td>
+      </tr>
+      <tr>
+        <td>Hotel</td>
+        <td>Activities</td>
+        <td>John F. Kennedy's Left Toenail</td>
+      </tr>
+      <tr>
+        <td>Hotel</td>
+        <td>Activities</td>
+        <td>Yes</td>
+      </tr>
+    </table>
 
-
+</div>
 <div class="white" id="footer">
   <p>Made by Hayden Carpenter</p>
-    <a class="urls" href="https://dev.dance" target="_blank">dev.dance</a>
-    <p>:)</p>
 </div>
 </body>
 </html>
