--- a/arizonaproject/project.html
+++ b/arizonaproject/project.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<link href="https://fonts.googleapis.com/css?family=Noto+Serif|Oswald" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Courgette|Noto+Serif|Oswald" rel="stylesheet">
 <link rel="stylesheet" href="../css/project.css">
 <script type="text/javascript" src="../js/jquery-3.3.1.js"></script>
 <script type="text/javascript" src="../js/project.js"></script>
@@ -70,12 +70,8 @@
     </div>
   </div>
 </div>
-
-
 <div class="white" id="footer">
   <p>Made by Hayden Carpenter</p>
-  <a class="urls" href="https://dev.dance" target="_blank">dev.dance</a>
-  <p>:)</p>
 </div>
 
 </body>
