--- a/arizonaproject/costs.html
+++ b/arizonaproject/costs.html
@@ -20,7 +20,7 @@
     </div>
   </div>
 <br>
-<h1 class="headings">Costs</h1>
+<h1 class="headings costsbackground">Costs</h1>
 <div class="costs">
   <div class="scheduletable row-padding" id="costs" align="center">
     <table class="padding costs">
@@ -68,7 +68,7 @@
     </table>
 
 </div>
-<div class="white" id="footer">
+<div class="white footer" id="footer">
   <p>Made by Hayden Carpenter</p>
 </div>
 </body>
