--- a/arizonaproject/events.html
+++ b/arizonaproject/events.html
@@ -22,47 +22,45 @@
   </div>
   <br>
   <!-- events-->
-  <h1 class="headings">Events</h1>
+  <h1 class="headings eventsbackground">Events</h1>
   <div class="center padding-64 row-padding" id="events">
-    <div class="quarter">
-      <div class="w3-card">
-        <img class="" src="https://t2.rbxcdn.com/a3b6774cd215e9293387a116568538a5" style="width:100%">
-        <div class="w3-container padding">
-          <h2>Test</h2>
-          <p>Test</p>
-          <p>Test</p>
-        </div>
-      </div>
-    </div>
-    <div class="quarter">
-      <div class="w3-card">
-        <img class="" src="https://t2.rbxcdn.com/a3b6774cd215e9293387a116568538a5" style="width:100%">
-        <div class="w3-container padding">
-          <h2>Test</h2>
-          <p>Test</p>
-          <p>Test</p>
-        </div>
-      </div>
-    </div>
-    <div class="quarter">
-      <div class="w3-card">
-        <img class="" src="https://t2.rbxcdn.com/a3b6774cd215e9293387a116568538a5" style="width:100%">
-        <div class="w3-container padding">
-          <h2>Test</h2>
-          <p>Test</p>
-          <p>Test</p>
-        </div>
-      </div>
-    </div>
-    <div class="quarter events">
+    <div class="quarter events w3-container">
       <h2>Events</h2>
       <p>Here are some events in Arizona</p>
       <p>They are nice</p>
       <p>Number two</p>
       <p>Electric Boogaloo</p>
     </div>
-  </div>
-  <div class="center padding-64 row-padding" id="events">
+    <div class="quarter">
+      <div class="w3-card">
+        <img class="" src="https://t2.rbxcdn.com/a3b6774cd215e9293387a116568538a5" style="width:100%">
+        <div class="w3-container padding">
+          <h2>Test</h2>
+          <p>Test</p>
+          <p>Test</p>
+        </div>
+      </div>
+    </div>
+    <div class="quarter">
+      <div class="w3-card">
+        <img class="" src="https://t2.rbxcdn.com/a3b6774cd215e9293387a116568538a5" style="width:100%">
+        <div class="w3-container padding">
+          <h2>Test</h2>
+          <p>Test</p>
+          <p>Test</p>
+        </div>
+      </div>
+    </div>
+    <div class="quarter">
+      <div class="w3-card">
+        <img class="" src="https://t2.rbxcdn.com/a3b6774cd215e9293387a116568538a5" style="width:100%">
+        <div class="w3-container padding">
+          <h2>Test</h2>
+          <p>Test</p>
+          <p>Test</p>
+        </div>
+      </div>
+    </div>
     <div class="quarter">
       <div class="w3-card">
         <img class="" src="http://www.ediblecommunities.com/sites/default/files/styles/ariticle_feartured_image_landscape/public/images/aggregator/phoenix%20arizona.jpg?itok=vDw3J-aS" style="width:100%">
@@ -84,7 +82,7 @@
       </div>
     </div>
   </div>
-  <div class="white" id="footer">
+  <div class="white footer" id="footer">
     <p>Made by Hayden Carpenter</p>
   </div>
 </body>
