--- a/arizonaproject/flights.html
+++ b/arizonaproject/flights.html
@@ -22,7 +22,7 @@
   </div>
   <br>
 <!-- Flights -->
-<h1 class="headings">Flights</h1>
+<h1 class="headings flightsbackground">Flights</h1>
 <div class="center padding-64 row-padding">
   <div class="quarter" id=flights>
     <h2>Flights:</h2>
@@ -59,7 +59,7 @@
     </div>
   </div>
 </div>
-<div class="white" id="footer">
+<div class="white footer" id="footer">
   <p>Made by Hayden Carpenter</p>
 </div>
 </div>
