--- a/arizonaproject/hotels.html
+++ b/arizonaproject/hotels.html
@@ -22,9 +22,9 @@
   </div>
   <br class="topPageFix">
   <!-- Hotels -->
-  <h1 class="headings">Hotels</h1>
+  <h1 class="headings hotelbackground">Hotels</h1>
   <div class="center padding-64 row-padding">
-    <div class="quarter" id=hotels>
+    <div class="quarter w3-container" id=hotels>
       <h2>Hotels:</h2>
       <p>This is some info about hotels in Arizona. Woo. Hotels.<p>
     </div>
@@ -59,7 +59,7 @@
       </div>
     </div>
   </div>
-  <div class="white" id="footer">
+  <div class="white footer" id="footer">
     <p>Made by Hayden Carpenter</p>
   </div>
 
