--- a/arizonaproject/project.html
+++ b/arizonaproject/project.html
@@ -10,7 +10,6 @@
 <title>Travel Project</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
-
 <div class="titles parallax" align="center" id='parallaxid'>
   <div class="top">
     <div class="col">
@@ -70,7 +69,7 @@
     </div>
   </div>
 </div>
-<div class="white" id="footer">
+<div class="white footer" id="footer">
   <p>Made by Hayden Carpenter</p>
 </div>
 
