--- a/arizonaproject/schedule.html
+++ b/arizonaproject/schedule.html
@@ -19,8 +19,9 @@
       <a href="costs.html" class="bar-item col.2" onclick="scrollToCosts()">Costs</a>
     </div>
   </div>
-<br style="line-height:100px" class="topPageFix">
-<h1 class="headings">Schedule</h1>
+<div class="">
+<br class="topPageFix">
+<h1 class="headings schedulebackground">Schedule</h1>
     <div class="scheduletable row-padding" id="schedule" align="center">
       <table class="padding schedule">
         <tr>
@@ -73,7 +74,7 @@
         </tr>
       </table>
     </div>
-    <div class="white" id="footer">
+    <div class="footer" id="footer">
       <p>Made by Hayden Carpenter</p>
     </div>
 </div>
