Update to index :)
oi animation

--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@ layout: default
   <link href="https://fonts.googleapis.com/css?family=Courgette|Noto+Serif|Oswald" rel="stylesheet">
   <link rel="stylesheet" href="css/project.css">
   <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
-  <script type="text/javascript" src="js/project.js"></script>
 </head>
-<body>
+  <div class="test">
+<body class="" style="">
   <title>Hayden's Bad Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <div class="homepage defaulttext">
-    <h1>hi, i'm hayden and this is a horrible website. please don't use it.</h1>
-    <h1>unless you're grading me. then please, continue.</h1>
+  <div class="defaulttext homepage">
+    <br style="line-height: 55px;">
+    <br>
+    <h1>a site for projects and stuff</h1>
     <br>
     <a class="linkonhomepage" href="https://dev.dance/arizonaproject/project.html">arizona project</a>
   </div>
+  <p class="uhhclassname">I hate web development</p>
 </body>
 </html>
