Update from school
yep

--- a/index.html
+++ b/index.html
@@ -7,18 +7,16 @@ layout: default
   <link href="https://fonts.googleapis.com/css?family=Courgette|Noto+Serif|Oswald" rel="stylesheet">
   <link rel="stylesheet" href="css/project.css">
   <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
-</head>
-  <div class="test">
-<body class="" style="">
   <title>Hayden's Bad Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <div class="defaulttext homepage">
-    <br style="line-height: 55px;">
-    <br>
-    <h1>a site for projects and stuff</h1>
-    <br>
+</head>
+<body>
+  <div class="test" style="overflow:visible;">
+  </div>
+  <div class="homepage defaulttext" style="overflow:visible;">
+      <br style="line-height: 55px;">
+    <h1 class="textonhome">a site for projects and stuff</h1>
     <a class="linkonhomepage" href="https://dev.dance/arizonaproject/project.html">arizona project</a>
   </div>
-  <p class="uhhclassname">I hate web development</p>
 </body>
 </html>
