--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@ layout: default
   <div class="homepage defaulttext" style="overflow:visible;">
       <br style="line-height: 55px;">
     <h1 class="textonhome">a site for projects and stuff</h1>
-    <a class="linkonhomepage" href="https://dev.dance/arizonaproject/project.html">arizona project</a>
   </div>
+    <div class="homepage defaulttext">
+    <a class="linkonhomepage" href="https://dev.dance/arizonaproject/project.html">click for arizona project</a>
+    </div>
 </body>
 </html>
