uhh i did stuff with the headings

--- a/arizonaproject/costs.html
+++ b/arizonaproject/costs.html
@@ -20,7 +20,9 @@
     </div>
   </div>
 <br>
-<h1 class="headings costsbackground">Costs</h1>
+<div class="headings costsbackground">
+  <p class="textheading">Costs</h1>
+</div>
 <div class="costs">
   <div class="scheduletable row-padding" id="costs" align="center">
     <table class="padding costs">
