--- a/arizonaproject/events.html
+++ b/arizonaproject/events.html
@@ -22,7 +22,9 @@
   </div>
   <br>
   <!-- events-->
-  <h1 class="headings eventsbackground">Events</h1>
+  <div class="headings eventsbackground">
+    <p class="textheading">Events</h1>
+  </div>
   <div class="center padding-64 row-padding" id="events">
     <div class="quarter events w3-container">
       <h2>Events</h2>
