--- a/arizonaproject/flights.html
+++ b/arizonaproject/flights.html
@@ -22,7 +22,9 @@
   </div>
   <br>
 <!-- Flights -->
-<h1 class="headings flightsbackground">Flights</h1>
+<div class="headings flightsbackground">
+  <p class="textheading">Flights</h1>
+</div>
 <div class="center padding-64 row-padding">
   <div class="quarter" id=flights>
     <h2>Flights:</h2>
