--- a/arizonaproject/hotels.html
+++ b/arizonaproject/hotels.html
@@ -22,7 +22,9 @@
   </div>
   <br class="topPageFix">
   <!-- Hotels -->
-  <h1 class="headings hotelbackground">Hotels</h1>
+  <div class="headings hotelbackground">
+    <p class="textheading">Hotels</h1>
+  </div>
   <div class="center padding-64 row-padding">
     <div class="quarter w3-container" id=hotels>
       <h2>Hotels:</h2>
