--- a/arizonaproject/schedule.html
+++ b/arizonaproject/schedule.html
@@ -21,7 +21,9 @@
   </div>
 <div class="">
 <br class="topPageFix">
-<h1 class="headings schedulebackground">Schedule</h1>
+<div class="headings schedulebackground">
+  <p class="textheading">Schedule</h1>
+</div>
     <div class="scheduletable row-padding" id="schedule" align="center">
       <table class="padding schedule">
         <tr>
