it broke but here it is so i can commit the changes i made at home and not deal with it

--- a/arizonaproject/costs.html
+++ b/arizonaproject/costs.html
@@ -27,45 +27,38 @@
   <div class="scheduletable row-padding" id="costs" align="center">
     <table class="padding costs">
       <tr>
-        <th>Total Activities Costs</th>
-        <th>Total Hotel Costs</th>
-        <th>Total Flights Cost</th>
-        <th>Total Costs</th>
+        <th>Hotel Costs</th>
+        <th>Activities Costs</th>
+        <th>Flights Cost</th>
       </tr>
       <tr>
-        <td>Hotel</td>
-        <td>Activities</td>
-        <td>$69.69</td>
+        <td>Rodeway Inn Downtown: $88 a night</td>
+        <td>Morning Hot Air Balloon Ride: $179 a person</td>
+        <td>Delta - ATL to PHX: $281 per person roundtrip</td>
       </tr>
       <tr>
-        <td>Hotel</td>
-        <td>Activities</td>
-        <td>$420.69</td>
+        <td>GreenTree Inn: $100 a night</td>
+        <td>Antelope Canyon Tour and Horseshoe Bend: $220 a person</td>
       </tr>
       <tr>
-        <td>Hotel</td>
-        <td>Activities</td>
-        <td>$1337.00</td>
+        <td>Viscount Suite Hotel: $129 a night</td>
+        <td>Apache Trail/Canyon Lake Steamboat Cruise: $150 a person</td>
       </tr>
       <tr>
-        <td>Hotel</td>
-        <td>Activities</td>
-        <td>An arm</td>
+        <td></td>
+        <td>Camelback Mountain: FREE</td>
       </tr>
       <tr>
-        <td>Hotel</td>
-        <td>Activities</td>
-        <td>A leg</td>
+        <td></td>
+        <td>Devil's Bridge Trail: FREE</td>
       </tr>
       <tr>
-        <td>Hotel</td>
-        <td>Activities</td>
-        <td>John F. Kennedy's Left Toenail</td>
+        <td></td>
+        <td>Medera Canyon: FREE</td>
       </tr>
       <tr>
-        <td>Hotel</td>
-        <td>Activities</td>
-        <td>Yes</td>
+        <td></td>
+        <td>Sabino Canyon: FREE</td>
       </tr>
     </table>
 
