--- a/arizonaproject/project.html
+++ b/arizonaproject/project.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <link href="https://fonts.googleapis.com/css?family=Courgette|Noto+Serif|Oswald" rel="stylesheet">
-<link rel="stylesheet" href="../css/project.css">
+<link rel="stylesheet" href="../css/homepage.css">
 <script type="text/javascript" src="../js/jquery-3.3.1.js"></script>
 <script type="text/javascript" src="../js/project.js"></script>
 
@@ -10,7 +10,7 @@
 <title>Travel Project</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
-<div class="titles parallax" align="center" id='parallaxid'>
+<div class="titles parallax" align="center" id='animate-area'>
   <div class="top">
     <div class="col">
       <a href="project.html" class="bar-item col.2" onclick="scrollToTop()">Home</a>
@@ -21,56 +21,10 @@
       <a href="costs.html" class="bar-item col.2" onclick="scrollToCosts()">Costs</a>
     </div>
   </div>
-  <div class="travellocation" id="topofpage">
+  <div class="travellocation" id="">
     <h1 class="travelp">Arizona</h1>
-    <p>Great, possibly amazing, other vague positive adjective.</p>
+    <p>A website by Hayden Carpenter</p>
   </div>
-</div>
-<br style="line-height:10px;">
-<div class="center padding-64 row-padding">
-  <div class="quarter">
-    <div class="w3-card">
-      <img class="" src="http://arizonawaterawareness.com/design_images/horseshoe_background.jpg" style="width:100%">
-      <div class="w3-container padding">
-        <h2>Hotel 1</h2>
-        <p>Hotel info</p>
-        <p>Hotel price</p>
-      </div>
-    </div>
-  </div>
-  <div class="quarter">
-    <div class="w3-card">
-      <img class="" src="https://www.planetware.com/photos-large/USAZ/arizona-sedona-red-rocks-and-snow.jpg" style="width:100%">
-      <div class="w3-container padding">
-        <h2>Hotel 1</h2>
-        <p>Hotel info</p>
-        <p>Hotel price</p>
-      </div>
-    </div>
-  </div>
-  <div class="quarter">
-    <div class="w3-card">
-      <img class="" src="https://livability.com/sites/default/files/bell_rock.jpg" style="width:100%">
-      <div class="w3-container padding">
-        <h2>oi m8</h2>
-        <p>Hotel info</p>
-        <p>Hotel price</p>
-      </div>
-    </div>
-  </div>
-  <div class="quarter">
-    <div class="w3-card">
-      <img class="" src="https://cdn-image.travelandleisure.com/sites/default/files/styles/1600x1000/public/1521816259/saguaro-national-park-arizona-CACTUSROBBER0318.jpg?itok=9J7uHWdi" style="width:100%">
-      <div class="w3-container padding">
-        <h2>:)</h2>
-        <p>info</p>
-        <p>wars</p>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="white footer" id="footer">
-  <p>Made by Hayden Carpenter</p>
 </div>
 
 </body>
