--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@ layout: default
 <html>
 <head>
   <link href="https://fonts.googleapis.com/css?family=Courgette|Noto+Serif|Oswald" rel="stylesheet">
-  <link rel="stylesheet" href="css/project.css">
+  <link rel="stylesheet" href="css/homepage.css">
   <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
   <title>Hayden's Bad Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
-  <div class="test" style="overflow:visible;">
+<body class="homepagescrollfix">>
+  <div class="test">
   </div>
   <div class="homepage defaulttext" style="overflow:visible;">
       <br style="line-height: 55px;">
