Updated Events page :)

--- a/arizonaproject/events.html
+++ b/arizonaproject/events.html
@@ -25,61 +25,95 @@
   <div class="headings eventsbackground">
     <p class="textheading">Events</h1>
   </div>
+  <div class="eventsheading">
+    <h2>Arizona Event Information:</h2>
+    <p>Here are the events I will be doing over my 7-day trip to Arizona.</p>
+    <p>Some are paid adventures. However over half of them are free.</p>
+  </div>
   <div class="center padding-64 row-padding" id="events">
     <div class="quarter events w3-container">
-      <h2>Events</h2>
-      <p>Here are some events in Arizona</p>
-      <p>They are nice</p>
-      <p>Number two</p>
-      <p>Electric Boogaloo</p>
+      <h1>Phoenix:</h1>
     </div>
     <div class="quarter">
       <div class="w3-card">
-        <img class="" src="https://t2.rbxcdn.com/a3b6774cd215e9293387a116568538a5" style="width:100%">
+        <img class="card-img" src="https://thumbnails.trvl-media.com/iV2M_h3dP1nZbBdZLu-eQ0rHado=/a.travel-assets.com/mediavault.le/media/256d3cb853b42888aa182f1b2d5cf8f5328ba930.jpeg" style="width:100%">
         <div class="w3-container padding">
-          <h2>Test</h2>
-          <p>Test</p>
-          <p>Test</p>
+          <h2>Morning Hot Air Balloon Ride</h2>
+          <p>A hot air balloon view of the Sonoran desert in Arizona. Event starts at 5 AM. The trip lasts for 3 hours 30 minutes, however the actual flight lasts about an hour. You get to see the expansive landscape of Arizona in its full glory.</p>
+          <p>$179 per person</p>
         </div>
       </div>
     </div>
     <div class="quarter">
       <div class="w3-card">
-        <img class="" src="https://t2.rbxcdn.com/a3b6774cd215e9293387a116568538a5" style="width:100%">
+        <img class="card-img" src="https://www.tripsavvy.com/thmb/NmWx3_rXabssjllnNBmPWM4ohkg=/2117x1416/filters:no_upscale():max_bytes(150000):strip_icc()/GettyImages-148531854-5a5f9b2cd92b0900361eff6d.jpg" style="width:100%">
         <div class="w3-container padding">
-          <h2>Test</h2>
-          <p>Test</p>
-          <p>Test</p>
+          <h2>Apache Trail/Canyon Lake Steamboat Cruise</h2>
+          <p>Full day tour of the Apache Trail and Canyon Lake. You visit the ghost town of Goldfield, as well as take a steamboat cruise on Canyon Lake.</p>
+          <p>$150 per person</p>
         </div>
       </div>
     </div>
     <div class="quarter">
       <div class="w3-card">
-        <img class="" src="https://t2.rbxcdn.com/a3b6774cd215e9293387a116568538a5" style="width:100%">
+        <img class="card-img" src="https://bloximages.newyork1.vip.townnews.com/azfamily.com/content/tncms/assets/v3/editorial/7/60/76069046-fa8f-58dc-87a9-973803f2195e/5bad5e313b403.image.jpg?resize=1200%2C675" style="width:100%">
         <div class="w3-container padding">
-          <h2>Test</h2>
-          <p>Test</p>
-          <p>Test</p>
+          <h2>Camelback Mountain</h2>
+          <p>This mountain offers a variety of activities including rock climbing, hiking, and hot air balloon rides. It is a challenging hiking location that offers amazing scenery.</p>
+          <p>Hiking is free</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br>
+  <div class="center padding-64 row-padding" id="events">
+    <div class="quarter events w3-container">
+      <h1>Sedona:</h1>
+    </div>
+    <div class="quarter">
+      <div class="w3-card">
+        <img class="card-img" src="http://www.ediblecommunities.com/sites/default/files/styles/ariticle_feartured_image_landscape/public/images/aggregator/phoenix%20arizona.jpg?itok=vDw3J-aS" style="width:100%">
+        <div class="w3-container padding">
+          <h2>Antelope Canyon Tour and Horseshoe Bend</h2>
+          <p>You are picked up from your hotel and driven through Oak Creek Canyon towards Antelope Canyon. After visiting a Cameron trading post, you hike Horseshoe Bend before returning back to your Sedona Hotel.</p>
+          <p>$220 per person</p>
         </div>
       </div>
     </div>
     <div class="quarter">
       <div class="w3-card">
-        <img class="" src="http://www.ediblecommunities.com/sites/default/files/styles/ariticle_feartured_image_landscape/public/images/aggregator/phoenix%20arizona.jpg?itok=vDw3J-aS" style="width:100%">
+        <img class="card-img" src="https://media-cdn.tripadvisor.com/media/photo-s/01/2b/ab/f5/husband-standing-on-bridge.jpg" style="width:100%">
         <div class="w3-container padding">
-          <h2>Pheonix</h2>
-          <p>The capital of Arizona and is the place I will be flying in to. It has many stores, parks, and museums.</p>
-          <p>It is known as "The Valley of the Sun".</p>
+          <h2>Devil’s Bridge Trail</h2>
+          <p>Devil's bridge is a rock “bridge” overhanging a drop. Easy hiking trail with beautiful view. Nice relaxed trip compared to the other, more strenuous hikes planned for other days.</p>
+          <p>Hiking is free</p>
         </div>
       </div>
     </div>
-    <div class="quarter">
-      <div class="w3-card">
-        <img class="" src="https://media.nationalgeographic.org/assets/photos/000/205/20510.jpg" style="width:100%">
-        <div class="w3-container padding">
-          <h2>Monument Valley</h2>
-          <p>Monument Valley is a popular tourist location in Arizona. It is on the Arizona-Utah border.</p>
-          <p>You hike there</p>
+  </div>
+  <br>
+  <div class="center padding-64 row-padding" id="events">
+    <div class="quarter events w3-container">
+      <h1>Tucson:</h1>
+    </div>
+      <div class="quarter">
+        <div class="w3-card">
+          <img class="card-img" src="https://bloximages.chicago2.vip.townnews.com/tucson.com/content/tncms/assets/v3/editorial/4/bc/4bc27b95-460f-5041-8780-70af02e3b5ee/5706b3877aa0e.image.jpg" style="width:100%">
+          <div class="w3-container padding">
+            <h2>Madera Canyon</h2>
+            <p>A cool location with brown rolling hills topped with greenery.</p>
+            <p>Hiking is free</p>
+          </div>
+        </div>
+      </div>
+      <div class="quarter">
+        <div class="w3-card">
+          <img class="card-img" src="https://www.arizonahighways.com/sites/default/files/activities/0316_sabinocanyontrail_v.jpg" style="width:100%">
+          <div class="w3-container padding">
+            <h2>Sabino Canyon</h2>
+            <p>Located in the Catalina Mountains and part of the Coronado National Forest. Hiking, swimming, biking, and more is offered at this location.</p>
+            <p>Hiking is free</p>
+          </div>
         </div>
       </div>
     </div>
