small things before I get to classs

--- a/arizonaproject/flights.html
+++ b/arizonaproject/flights.html
@@ -32,31 +32,11 @@
   </div>
   <div class="quarter">
     <div class="w3-card">
-      <img class="" src="https://www.atlantaga.gov/Home/ShowImage?id=3272&t=636335665341170000" style="width:100%">
+      <img class="" src="https://news.delta.com/file/27001/download?token=Tp_CotWd" style="width:100%">
       <div class="w3-container padding">
-        <h2>Flight 1</h2>
-        <p>Flight info</p>
-        <p>Flight price</p>
-      </div>
-    </div>
-  </div>
-  <div class="quarter">
-    <div class="w3-card">
-      <img class="" src="https://www.atlantaga.gov/Home/ShowImage?id=3272&t=636335665341170000" style="width:100%">
-      <div class="w3-container padding">
-        <h2>Flight 2</h2>
-        <p>Flight info</p>
-        <p>Flight price</p>
-      </div>
-    </div>
-  </div>
-  <div class="quarter">
-    <div class="w3-card">
-      <img class="" src="https://www.atlantaga.gov/Home/ShowImage?id=3272&t=636335665341170000" style="width:100%">
-      <div class="w3-container padding">
-        <h2>Flight 3</h2>
-        <p>Flight info</p>
-        <p>Flight price</p>
+        <h2>Delta Flight: ATL to PHX</h2>
+        <p>Economy - Wifi, Charging, and Movies available.</p>
+        <p>$281 per roundtrip</p>
       </div>
     </div>
   </div>
