--- a/arizonaproject/hotels.html
+++ b/arizonaproject/hotels.html
@@ -32,31 +32,31 @@
     </div>
     <div class="quarter">
       <div class="w3-card">
-        <img class="" src="https://www.atlantaga.gov/Home/ShowImage?id=3272&t=636335665341170000" style="width:100%">
+        <img class="card-img" src="https://t-ec.bstatic.com/images/hotel/max1024x768/170/170430394.jpg" style="width:100%">
         <div class="w3-container padding">
-          <h2>Hotel 1</h2>
+          <h2>Rodeway Inn Downtown Phoenix</h2>
           <p>Hotel info</p>
-          <p>Hotel price</p>
+          <p>$88 per night</p>
         </div>
       </div>
     </div>
     <div class="quarter">
       <div class="w3-card">
-        <img class="" src="https://www.atlantaga.gov/Home/ShowImage?id=3272&t=636335665341170000" style="width:100%">
+        <img class="card-img" src="https://t-ec.bstatic.com/images/hotel/max1024x768/896/89691461.jpg" style="width:100%">
         <div class="w3-container padding">
-          <h2>Hotel 2</h2>
+          <h2>GreenTree Inn Sedona</h2>
           <p>Hotel info</p>
-          <p>Hotel price</p>
+          <p>$100 per night</p>
         </div>
       </div>
     </div>
     <div class="quarter">
       <div class="w3-card">
-        <img class="" src="https://www.atlantaga.gov/Home/ShowImage?id=3272&t=636335665341170000" style="width:100%">
+        <img class="card-img" src="https://t-ec.bstatic.com/images/hotel/max1024x768/163/16300846.jpg" style="width:100%">
         <div class="w3-container padding">
-          <h2>Hotel 3</h2>
+          <h2>Viscount Suite Hotel</h2>
           <p>Hotel info</p>
-          <p>Hotel price</p>
+          <p>$129 per night</p>
         </div>
       </div>
     </div>
